--- a/Flipkart/Electronics/templates/Electronics/home.html
+++ b/Flipkart/Electronics/templates/Electronics/home.html
@@ -91,8 +91,8 @@
       <div class="products">
         {% for pro in prod %}
           <div class="product-card">
-            <div class="product-brand"><a href="https://robu.in">{{pro.brand}}</a></div>
-            <div class="product-name"><a href="https://robu.in">{{pro.name}}</a></div>
+            <div class="product-brand"><a href="/">{{pro.brand}}</a></div>
+            <div class="product-name"><a href="/">{{pro.name}}</a></div>
             <div class="product-sku">{{pro.desc}}</div>
             <div class="product-footer">
               <div class="product-price">Rs. {{pro.price}}</div>
@@ -101,6 +101,9 @@
           </div>
         {% endfor %}
       </div>
+    </div>
+    <div>
+        {{fm.}}
     </div>
   </body>
 </html>
